sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/Leave_Entitlement_Utilization__c.object-meta.xml
<CustomObject>
    <label>Leave Entitlement Utilization</label>
    <nameField>
        <displayFormat>LEU-{00000000}</displayFormat>
        <label>Leave Entitlement Utilization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Entitlement Utilization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>