sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/fields/Accrued_To_Date_Selected__c.field-meta.xml
<CustomField>
    <fullName>Accrued_To_Date_Selected__c</fullName>
    <label>Accrued To Date Selected</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>