sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/fields/Leave_Days_Accrued__c.field-meta.xml
<CustomField>
    <fullName>Leave_Days_Accrued__c</fullName>
    <label>Leave Days Accrued</label>
    <summarizedField>Leave_Accrual__c.Days_Accrued__c</summarizedField>
    <summaryForeignKey>Leave_Accrual__c.Leave_Entitlement_Utilization__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>