sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/fields/Leave_Days_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Leave_Days_Remaining__c</fullName>
    <formula>Leave_Days_Accrued__c   -  Leave_Days_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Days Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>