sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/fields/Leave_Days_Used__c.field-meta.xml
<CustomField>
    <fullName>Leave_Days_Used__c</fullName>
    <label>Leave Days Used</label>
    <summarizedField>Employee_Leave_Request__c.No_Of_Approved_Leave_Days__c</summarizedField>
    <summaryFilterItems>
        <field>Employee_Leave_Request__c.Leave_Approved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Employee_Leave_Request__c.Leave_Started__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee_Leave_Request__c.Leave_Entitlement_Utilization__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>