sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/fields/Leave_Entitlement_Type_Config__c.field-meta.xml
<CustomField>
    <fullName>Leave_Entitlement_Type_Config__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Leave Entitlement Type Config</label>
    <referenceTo>Leave_Entitlement_Type_Config__c</referenceTo>
    <relationshipLabel>Leave Entitlement Utilization</relationshipLabel>
    <relationshipName>Leave_Entitlement_Utilization</relationshipName>
    <type>Lookup</type>
</CustomField>