sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <formula>IF( ISPICKVAL(Leave_Entitlement_Type_Config__r.Leave_Type__c, &#39;Annual Leave&#39;) , &#39;Annual Leave&#39;,  IF( ISPICKVAL(Leave_Entitlement_Type_Config__r.Leave_Type__c, &#39;Sick Leave&#39;) , &#39;Sick Leave&#39;,  
IF( ISPICKVAL(Leave_Entitlement_Type_Config__r.Leave_Type__c, &#39;Maternity Leave&#39;) , &#39;Maternity Leave&#39;,
IF( ISPICKVAL(Leave_Entitlement_Type_Config__r.Leave_Type__c, &#39;Paternity Leave&#39;) , &#39;Paternity Leave&#39;,
IF( ISPICKVAL(Leave_Entitlement_Type_Config__r.Leave_Type__c, &#39;Exam Leave&#39;) , &#39;Exam Leave&#39;,
IF( ISPICKVAL(Leave_Entitlement_Type_Config__r.Leave_Type__c, &#39;Compassionate Leave&#39;) , &#39;Compassionate Leave&#39;, NULL))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Type</label>
    <type>Text</type>
</CustomField>