sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/fields/Leave_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type_Name__c</fullName>
    <formula>Leave_Entitlement_Type_Config__r.Leave_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Type Name</label>
    <type>Text</type>
</CustomField>