sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/fields/Leave_Year__c.field-meta.xml
<CustomField>
    <fullName>Leave_Year__c</fullName>
    <formula>Leave_Entitlement_Type_Config__r.Year__c</formula>
    <label>Leave Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>