sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/fields/Total_No_of_Leave_Days__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Leave_Days__c</fullName>
    <label>Total No. of Leave Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>