sfSandBoxCode/force-app/main/default/objects/Leave_Entitlement_Utilization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Leave_Entitlement_Type_Config__c</columns>
    <columns>Employee__c</columns>
    <columns>Total_No_of_Leave_Days__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>Leave_Days_Used__c</columns>
    <columns>Leave_Days_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>